--- a/index.html
+++ b/index.html
@@ -7,7 +7,16 @@
 <body>
 	<section class="scene">
 		<div class="sun"></div>
+		<div class="bg"></div>
+			<img src="police_car.gif" class="car1">
+			<img src="police_car.gif" class="car2">
 	</section>
-
+	<script>
+		const sun = document.querySelector('.sun');
+		const body = document.querySelector('body');
+		sun.onclick = function(){
+			body.classList.toggle('dark')
+		}
+	</script>
 </body>
 </html>
